force-app/main/default/objects/Product2/fields/stripeGC__Product__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Product</label>
    <referenceTo>stripeGC__Product__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Product2s</relationshipName>
    <type>Lookup</type>
</CustomField>