force-app/main/default/objects/Product2/fields/stripeGC__Product_Id__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Product_Id__c</fullName>
    <label>Stripe Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>