force-app/main/default/objects/Product2/fields/ucinn_ascendv2__Giving_Society__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Giving_Society__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Giving Society</label>
    <referenceTo>ucinn_ascendv2__Giving_Society__c</referenceTo>
    <relationshipLabel>Membership Levels (Products)</relationshipLabel>
    <relationshipName>Products_Giving_Society</relationshipName>
    <type>Lookup</type>
</CustomField>