force-app/main/default/objects/Product2/fields/ucinn_ascendv2__Is_Searchable_for_POS__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Searchable_for_POS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Searchable for POS</label>
    <type>Checkbox</type>
</CustomField>