force-app/main/default/objects/Product2/fields/ucinn_ascendv2__Months_Allocated_on_Payment_in_Full__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Months_Allocated_on_Payment_in_Full__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Months Allocated on Payment in Full</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>