force-app/main/default/objects/Product2/fields/ucinn_ascendv2__Payment_Options__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Payment_Options__c</fullName>
    <label>Payment Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time Membership</fullName>
            </value>
            <value>
                <fullName>Auto Renewing Membership</fullName>
            </value>
            <value>
                <fullName>Installment Based Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>