force-app/main/default/objects/Product2/fields/ucinn_ascendv2__Picture__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Picture__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; + ucinn_ascendv2__Picture_ID__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>