force-app/main/default/objects/Product2/fields/ucinn_ascendv2__Picture_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Picture_ID__c</fullName>
    <label>Picture ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>