force-app/main/default/objects/Product2/recordTypes/ucinn_ascendv2__Membership_Level.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Membership_Level</fullName>
    <active>false</active>
    <description>Membership level product</description>
    <label>Membership Level</label>
</RecordType>