force-app/main/default/objects/Product2/recordTypes/ucinn_ascendv2__Naming_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Naming_Opportunity</fullName>
    <active>true</active>
    <description>For naming opportunities</description>
    <label>Naming Opportunity</label>
</RecordType>