force-app/main/default/objects/Product2/recordTypes/ucinn_ascendv2__Non_Gift.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Non_Gift</fullName>
    <active>true</active>
    <description>Non-Gift product</description>
    <label>Non Gift</label>
</RecordType>