force-app/main/default/objects/Product2/validationRules/bt_stripe__Validate_PG_is_Stripe.validationRule-meta.xml
<ValidationRule>
    <fullName>bt_stripe__Validate_PG_is_Stripe</fullName>
    <active>true</active>
    <description>this rules validates that the selected payment gateway  provider is stripe</description>
    <errorConditionFormula>if(bt_stripe__Payment_Gateway__c==null,false,NOT(ISPICKVAL(bt_stripe__Payment_Gateway__r.bt_stripe__Provider__c, &apos;Stripe&apos;)==true) )</errorConditionFormula>
    <errorDisplayField>bt_stripe__Payment_Gateway__c</errorDisplayField>
    <errorMessage>Please select  Stripe Payment Gateway</errorMessage>
</ValidationRule>