force-app/main/default/objects/Product2/listViews/Naming_Opportunities.listView-meta.xml
<ListView>
    <fullName>Naming_Opportunities</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>HAM_Target_Gift_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.ucinn_ascendv2__Naming_Opportunity</value>
    </filters>
    <label>Naming Opportunities</label>
</ListView>